# Jaguar

./: .clang-format  .gitignore  README.md  index.html  meson.build  meson_options.txt
.github/workflows/: docs.yml
docs/: README.md  conf.py  index.rst  requirements.txt  spec.md  switcher.json
latest/: .buildinfo  index.html  objects.inv  search.html  searchindex.js  spec.html
latest/api/: classlibjaguar_1_1Decoder.html  classlibjaguar_1_1Encoder.html  classlibjaguar_1_1Matrix.html  classlibjaguar_1_1Reader.html  classlibjaguar_1_1SVHandle.html  classlibjaguar_1_1ScopedReadView.html  classlibjaguar_1_1ScopedView.html  classlibjaguar_1_1Vector_3_01T_00_012_01_4.html  classlibjaguar_1_1Vector_3_01T_00_013_01_4.html  classlibjaguar_1_1Vector_3_01T_00_014_01_4.html  classlibjaguar_1_1Writer.html  define_DllHelper_8hpp_1adb51d99265c77f42fb66d812558ca03d.html  dir_libjaguar.html  dir_libjaguar_include.html  dir_libjaguar_include_libjaguar.html  enum_TypeTags_8hpp_1aeb1054c5aab114f844a08b5158020814.html  file_libjaguar_include_libjaguar_Decoder.hpp.html  file_libjaguar_include_libjaguar_DllHelper.hpp.html  file_libjaguar_include_libjaguar_Encoder.hpp.html  file_libjaguar_include_libjaguar_Index.hpp.html  file_libjaguar_include_libjaguar_MathTypes.hpp.html  file_libjaguar_include_libjaguar_Reader.hpp.html  file_libjaguar_include_libjaguar_ScopedView.hpp.html  file_libjaguar_include_libjaguar_StructuredTypeLayout.hpp.html  file_libjaguar_include_libjaguar_Traits.hpp.html  file_libjaguar_include_libjaguar_TypeTags.hpp.html  file_libjaguar_include_libjaguar_Value.hpp.html  file_libjaguar_include_libjaguar_ValueHeader.hpp.html  index.html  namespace_libjaguar.html  (+24 more)
libjaguar/: meson.build
libjaguar/include/libjaguar/: Decoder.hpp  DllHelper.hpp  Encoder.hpp  Index.hpp  MathTypes.hpp  Reader.hpp  ScopedView.hpp  StructuredTypeLayout.hpp  Traits.hpp  TypeTags.hpp  Value.hpp  ValueHeader.hpp  Writer.hpp
libjaguar/src/: Decoder.cpp  Encoder.cpp  Internal.hpp  Reader.cpp  Unicode.cpp  Unicode.hpp  Utilities.hpp  Writer.cpp
